2006-08-17  Matthew Allum  <mallum@openedhand.com>

	* xsettings-manager.c: (xsettings_manager_new):
	Make SetSelection use CurrentTime rather than generated timestamp.
       Appears to work around wierd race issues on slow machines.

2006-07-28  Chris Lord  <chris@openedhand.com>

	* configure.ac:
	* Makefile.am:
	* settings-daemon.schemas:
	Add GConf schema to install default value of 'Clearlooks' to
	/desktop/poky/interface/theme.

2006-07-27  Matthew Allum  <mallum@openedhand.com>

	* settings-daemon.c: (main):
	fork before calling gtk_init()

2005-10-14  Ross Burton  <ross@burtonini.com>

	* settings-daemon.c:
	Relocate all GConf keys to /desktop/poky.

2005-10-03  Ross Burton  <ross@burtonini.com>

	* settings-daemon.c:
	Don't notify the X Settings when any key changes, just ones we are
	interested in.
	
2005-10-03  Ross Burton  <ross@burtonini.com>

	* settings-daemon.c:
	Don't set the Xft values every time a key changes, as this
	involves spawning xrdb.

2005-10-03  Ross Burton  <ross@burtonini.com>

	* settings-daemon.c:
	Programatically monitor keys.

2005-10-03  Ross Burton  <ross@burtonini.com>

	* settings-daemon.c:
	* Makefile.am:
	Tweak the code a bit.

2005-10-03  Ross Burton  <ross@burtonini.com>

	* Mafefile.am:
	Clean up, remove unused defines.

2005-10-03  Ross Burton  <ross@burtonini.com>

	* settings-daemon.c:
	Make the use of the Matchbox theme key more explicit.

2005-10-03  Ross Burton  <ross@burtonini.com>

	* settings-daemon.c:
	Add stylus mode, fix toolbar mode, monitor gnome keys for changes.

2005-03-14  mallum,,,  <mallum@openedhand.com>

	* settings-daemon.c: (main):
	Fork much ealier

2005-02-04  mallum,,,  <mallum@openedhand.com>

	* README:
	Add some content

2005-02-04  mallum,,,  <mallum@openedhand.com>

	* Makefile.am:
	Fix. Add required autofoo README etc ..